Fix T55491: Double click fail in menu popups